cluster/apps-archive/default/librephotos/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: librephotos
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
