cluster/apps-archive/default/librephotos/app/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend
          image: reallibrephotos/librephotos:dev
          volumeMounts:
            - mountPath: /data
              name: photos
            - mountPath: /protected_media
              name: media
          ports:
            - name: backend
              containerPort: 8001
          readinessProbe:
            tcpSocket:
              port: backend
            initialDelaySeconds: 15
          livenessProbe:
            tcpSocket:
              port: backend
            initialDelaySeconds: 15
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: photos
          nfs:
            path: /volume1/Users/mmckessock/Pictures
            server: granite.${DOMAIN}
        - name: media
          persistentVolumeClaim:
            claimName: media
