cluster/apps-archive/default/librephotos/app/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: reallibrephotos/librephotos-frontend:dev
          ports:
            - containerPort: 3000
