cluster/apps-archive/default/librephotos/app/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          args:
            - -c
            - fsync=off
            - -c
            - synchronous_commit=off
            - -c
            - full_page_writes=off
            - -c
            - random_page_cost=1.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
              subPath: librephotos
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres
