cluster/apps-archive/default/librephotos/app/proxy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: proxy
    spec:
      containers:
        - name: proxy
          image: reallibrephotos/librephotos-proxy:dev
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: photos
            - mountPath: /protected_media
              name: media
      volumes:
        - name: photos
          nfs:
            path: /volume1/Users/mmckessock/Pictures
            server: granite.${DOMAIN}
        - name: media
          persistentVolumeClaim:
            claimName: media
