cluster/apps-archive/default/librephotos/app/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
