cluster/apps-archive/default/librephotos/app/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: librephotos
spec:
  selector:
    app.kubernetes.io/name: librephotos
    app.kubernetes.io/component: frontend
  ports:
    - port: 3000
