cluster/apps-archive/default/librephotos/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librephotos
  namespace: librephotos
  labels:
    name: librephotos
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  rules:
    - host: librephotos.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxy
                port:
                  number: 80
  tls:
    - hosts:
        - librephotos.${DOMAIN}
      secretName: librephotos-cert
